<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#D8D8D8"
    tools:context="com.javier.jmreservas.VistaEnviarCorreo">

    <TextView
        android:layout_marginTop="4dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/tituloCorreos"
        android:id="@+id/txt4"
        android:layout_gravity="center_horizontal" />

    <LinearLayout
        android:gravity="center"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/corSub"
            android:id="@+id/txt5" />

        <EditText
            android:layout_marginLeft="50dp"
            android:layout_marginStart="50dp"
            android:height="60dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:maxLength="40"
            android:maxLines="2"
            android:ems="10"
            android:id="@+id/tbxCorreoAsunto" />
    </LinearLayout>

    <LinearLayout
        android:gravity="center"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/corMsg"
            android:id="@+id/txt6" />

        <EditText
            android:layout_marginLeft="36dp"
            android:layout_marginStart="36dp"
            android:height="80dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:maxLength="60"
            android:maxLines="3"
            android:ems="10"
            android:id="@+id/tbxCorreoMensaje" />
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="4dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/loginContra"
            android:id="@+id/txt7" />

        <EditText
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:height="40dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:maxLength="200"
            android:ems="10"
            android:id="@+id/tbxCorreoContra" />
    </LinearLayout>

    <ListView
        android:divider="@android:drawable/button_onoff_indicator_off"
        android:dividerHeight="6dp"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:id="@+id/listaCorreos"
        android:choiceMode="none"
        android:layout_gravity="center_horizontal" />

</LinearLayout>
